[gd_scene load_steps=8 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui.select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="pontuacao" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -104.0
margin_right = 104.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Message_Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -22.0
margin_right = 188.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 2 )
text = "Desvie e sobreviva aos monstros!"
align = 1
valign = 1
autowrap = true

[node name="MsgTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Start_Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -156.0
margin_right = 61.0
margin_bottom = -111.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Iniciar"

[connection signal="timeout" from="MsgTimer" to="." method="_on_MsgTimer_timeout"]
[connection signal="pressed" from="Start_Button" to="." method="_on_Start_Button_pressed"]
